# ChemistrySuite

./: LICENSE.txt  README.md  changelog.md  main.py  pyproject.toml  requirements.txt  version.json
instructions/: dil_calculator_inst.html  dosy_calculator_inst.html  ea_calculator_inst.html  iso_dist_calculator_inst.html  main_inst.html  nmr_impurities_inst.html  solvent_misc_inst.html  solvent_properties_inst.html
lib/: atomic_data.py  common_reagents_data.py  common_solvents_data.py  miscibility_data.py  ms_adducts_data.py  ms_isotopes_data.py  nmr_13c_data.py  nmr_1h_data.py  nmr_common.py  nmr_solvent_data.py  solvent_data.py
logic/: __init__.py  constants.py  dilution.py  dosy.py  ea.py  isotopes.py  logic.py  shared_functions.py  viscosity.py
resources/: home_page.html
tests/: conftest.py  dil_test.py  dosy_test.py  ea_integration_test.py  ea_test.py  iso_dist_test.py  logic_formula_test.py  ms_data_test.py  nmr_test.py  shared_functions_test.py  viscosity_test.py
widgets/: dil_calculator.py  dosy_calculator.py  ea_calculator.py  iso_dist_calculator.py  nmr_impurities.py  solvent_misc.py  solvent_properties.py
