
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chemistry-suite"
version = "0.8.3"
description = "A modular suite of tools for chemical data and calculations"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Alvaro Etcheverry Berrios"}]
dependencies = [
    "PyQt6>=6.4.0",
    "PyQt6-WebEngine>=6.4.0",
    "matplotlib>=3.6.0",
    "requests>=2.28.0",
    "certifi>=2022.9.24"
]

# [tool.setuptools.packages.find]
# where = ["."]
# include = ["logic*", "lib*", "widgets*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
